--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,32 @@
 # Basic
-title: 潘柏信
-subtitle: 个人站
-description: 欢迎来到我的个人站~
+title: YiTaQ
+subtitle: Qの小窝
+description: 喵？
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: Q
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: Learning
+url: "http://yitaq.github.io"
 
 # Comment
 comment:
     # disqus: leopard
-    # duoshuo: leopard 
+    # duoshuo: leopard
     # cloudTie: leopard
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
-    # twitter: 
-    mail: leopardpan@icloud.com
+    # weibo: 5366874726
+    github: YiTaQ
+    # twitter:
+    mail: chenmu2017@gmail.com
 
-# 百度统计 
-# 使用博客模板请去掉或者更换 id 
-baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
-
-# Google Analytics
+# 百度统计
 # 使用博客模板请去掉或者更换 id
-ga:
-    id: UA-84134159-3   
-    host: auto  
+# baidu:
+    # id: 8ba1c6be0953b6f9c2ba38e57f615421
+
+
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
@@ -58,14 +54,12 @@ blog_button:
 
 # Navigation buttons in the front page.s
 nav:
-    - {title: 所有文章, description: archive, url: '/archive'}   
-    - {title: 标签, description: tags, url: '/tags'}      
-    - {title: 关于我, description: about, url: '/about'}      
-    
+    - {title: 所有文章, description: archive, url: '/archive'}
+    - {title: 标签, description: tags, url: '/tags'}
+    - {title: 关于我, description: about, url: '/about'}
+
 
 # Pagination
 gems: [jekyll-paginate,jekyll-sitemap]
 paginate: 20
 paginate_path: "page/:num/"
-
-
